--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,20 @@ And constructed with the following guidelines:
 * Bug fixes and misc changes bumps the patch
 
 
+qdapDictionaries 1.0.3
+----------------------------------------------------------------
+
+BUG FIXES
+
+NEW FEATURES
+
+MINOR FEATURES
+
+IMPROVEMENTS
+
+CHANGES
+
+
 qdapDictionaries 1.0.2
 ----------------------------------------------------------------
 
@@ -30,13 +44,10 @@ NEW FEATURES
 * `GradyAugmented` was added.  This augmented Grady data set is a large list of 
  known English words and proper nouns.
 
-MINOR FEATURES
-
 IMPROVEMENTS
 
 * `contractions` data set picks up 3 words: "it'll", "'cause", & "there'll".
 
-CHANGES
 
 qdapDictionaries 1.0.0 - 1.0.1
 ----------------------------------------------------------------
