--- a/NEWS
+++ b/NEWS
@@ -33,6 +33,8 @@ IMPROVEMENTS
 
 CHANGES
 
+* The **qdap** package is no longer in Suggests: in the DESCRIPTION file.
+
 
 qdapDictionaries 1.0.2
 ----------------------------------------------------------------
