renamed function_words to function.words

--- a/NEWS
+++ b/NEWS
@@ -27,7 +27,7 @@ BUG FIXES
 
 NEW FEATURES
 
-* `function_words` a list of function words added from: http://myweb.tiscali.co.uk/wordscape/museum/funcword.html
+* `function.words` a list of function words added from: http://myweb.tiscali.co.uk/wordscape/museum/funcword.html
 
 MINOR FEATURES
 
