more errors fixex in NEWS

--- a/NEWS
+++ b/NEWS
@@ -26,7 +26,7 @@ BUG FIXES
   rather than "what'd" and "when" rather than "when'd" = "when did".
 
 * The data sets `emoticon` and `abbreviations` had the columns stored as `factor`.  
-  These columns have been chanegd to `character`.
+  These columns have been changed to `character`.
 
 NEW FEATURES
 
@@ -48,7 +48,7 @@ qdapDictionaries 1.0.2
 
 BUG FIXES
 
-* `key.syn` contained antonyms and elemets the were error messages (character).
+* `key.syn` contained antonyms and elements that were error messages (character).
   This has been fixed.  Reference issue #2. (Jingjing Zou)
 
 NEW FEATURES
@@ -92,4 +92,5 @@ First version sent to CRAN
 qdapDictionaries 0.0.1
 ----------------------------------------------------------------
 
-The dictionaries and word lists previously found in qdap have been moved to a separate package, qdapDictionaries.  This is the first installment of the package.
+The dictionaries and word lists previously found in **qdap** have been moved to a separate package, qdapDictionaries.  This is the first instalment of the package.
+
