--- a/NEWS
+++ b/NEWS
@@ -21,13 +21,18 @@ And constructed with the following guidelines:
 qdapDictionaries 1.0.7
 ----------------------------------------------------------------
 
+BUG FIXES
 
-
+* `deamplification.words` contained a typo: "sparesly" instead of "sparsely".
+  This was spotted by Claire Kunesh.
+  
 qdapDictionaries 1.0.6
 ----------------------------------------------------------------
 
-A named index was used in the internal function `left.just` producing an `NA`.
-This caused an error to be thrown in **R Under development (unstable) (2015-05-19 r68384)**.
+BUG FIXES
+
+* A named index was used in the internal function `left.just` producing an `NA`.
+  This caused an error to be thrown in **R Under development (unstable) (2015-05-19 r68384)**.
 
 
 qdapDictionaries 1.0.5
