--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,10 @@ And constructed with the following guidelines:
 
 
 
+qdapDictionaries 1.0.8
+----------------------------------------------------------------
+
+
 qdapDictionaries 1.0.7
 ----------------------------------------------------------------
 
